--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,12 @@
 			</a>
 			<h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
-			<section id="buttons">
+			<section id="buttons" style="display: flex; align-items: center;">
 				<a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on
 					GitHub</a>
+				<iframe
+					src="https://ghbtns.com/github-btn.html?user=xThaySan&repo=xthaysan.github.io&type=star&count=true"
+					frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe>
 			</section>
 		</div>
 	</header>
