--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 		</h1>
 		<section id="downloads">
 			{% for file in page.files %}
-			<a href="_files/{{ file }}" class="btn">{{ file }}</a>
+			<a href="files/{{ file }}" class="btn">{{ file }}</a>
 			{% endfor %}
 		</section>
 		{% endif %}
